Fixed reset dashboard bugand z-index issue with search_help

--- a/crits/core/static/css/core.css
+++ b/crits/core/static/css/core.css
@@ -390,7 +390,7 @@ span.right.link a:link{
 ul.gridster {
     padding-left: 0px !important;
 }
-.top.responsive {
+.top.responsive, .z-11 {
 	z-index:11;
 }
 .edit-button {
